--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ package-lock.json
 .env
 .env.local
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Debug logs
 npm-debug.log*
@@ -30,4 +33,7 @@ build/
 *.db
 
 # Vercel
-.vercel 
+.vercel
+
+# Next.js
+.next 
