--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,8 @@
   "outputDirectory": ".next",
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
       "src": "/uploads/(.*)",
-      "dest": "/public/uploads/$1"
+      "dest": "/uploads/$1"
     },
     {
       "src": "/(.*)",
