--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "form-data": "^4.0.2",
     "formidable": "^3.5.1",
     "leaflet": "^1.9.4",
     "multer": "^1.4.5-lts.1",
     "nedb": "^1.8.0",
     "next": "^14.0.3",
     "next-connect": "^1.0.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
