--- a/vercel.json
+++ b/vercel.json
@@ -21,9 +21,20 @@
     {
       "src": "/(.*)",
       "dest": "/$1"
+    },
+    {
+      "src": "/api/whispers",
+      "methods": ["GET", "POST", "OPTIONS"],
+      "dest": "/api/whispers"
+    },
+    {
+      "src": "/api/upload-whisper",
+      "methods": ["POST", "OPTIONS"],
+      "dest": "/api/upload-whisper"
     }
   ],
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "BLOB_READ_WRITE_TOKEN": "@blob_read_write_token"
   }
 } 
