--- a/vercel.json
+++ b/vercel.json
@@ -36,5 +36,11 @@
   "env": {
     "NODE_ENV": "production",
     "BLOB_READ_WRITE_TOKEN": "@blob_read_write_token"
-  }
+  },
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ]
 } 
